# edgemamba3

./: .dockerignore  .gitignore  EdgeMamba3_Pipeline.ipynb  README.md  pyproject.toml  test_vn.py
ablations/: __init__.py  run_ablations.py
baselines/: __init__.py  attn_ranking.py  edge_mamba2.py  node_mamba3.py  static_serial.py
configs/: lrgb_peptides_func.yaml  lrgb_peptides_struct.yaml  relbench_amazon_ltv.yaml  relbench_hm_churn.yaml
data/: __init__.py  lrgb_loader.py  relbench_loader.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
models/: __init__.py  edgemamba3.py  line_graph.py  ltas.py  mamba3_encoder.py  readout.py  temporal_order.py
results/ablation/: ablation_data.json  ablation_table.txt
results/amazon_ltv/: curves.json  seed0_log.txt  seed1_log.txt  seed2_log.txt  summary.txt
results/hm_churn/: curves.json  seed0_log.txt  seed1_log.txt  seed2_log.txt  summary.txt
results/peptides_func/: curves.json  seed0_log.txt  seed1_log.txt  seed2_log.txt  summary.txt
results/peptides_struct/: curves.json  seed0_log.txt  seed1_log.txt  seed2_log.txt  summary.txt
scripts/: check_relbench.py  download_data.py  smoke_test_lrgb.py  smoke_test_relbench.py  train_lrgb.py  train_relbench.py  validate_env.py
tests/: test_baselines.py  test_encoder.py  test_line_graph.py  test_ltas.py  test_model_lrgb.py  test_model_relbench.py
train/: __init__.py  callbacks.py  distributed.py  metrics.py  trainer.py
